# BME_prog2_tickets

./: CMakeLists.txt  README.html  README.md  allomas.cpp  allomas.h  allomas_kezeles.h  allomas_test.hpp  exeptions.h  ido.cpp  ido.h  ido_test.hpp  input_manage.h  jegy.cpp  jegy.h  jegy_kezeles.h  jegy_kezeles.hpp  jegy_test.hpp  list.h  list.hpp  list_test.hpp  main.cpp  menu.h  seriazible.h  string.cpp  string.h  string_test.hpp  test.cpp  test.hpp  time.h  vonat.cpp  vonat.h  vonat_kezeles.h  vonat_test.hpp
